--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   go_router: ^14.2.7
   animated_snack_bar: ^0.4.0
   camera: ^0.11.2
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
